1 file modified, 1 added

--- a/midterms/EJS/views/index.ejs
+++ b/midterms/EJS/views/index.ejs
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title><%= title %></title>
-</head>
-<body>
-<h1>Welcome to <%= title %>!</h1>
-
-</body>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+        <meta charset="UTF-8">
+        <title><%= title %></title> 
+        <link rel="stylesheet" href ="/css/styles.css"> 
+</head> 
+<body> 
+        <h1>Welcome to <%= title %>!</h1> 
+        <h3>My name is Joshua Ezekiel T. Limiac &#128540; ✌️</h3> 
+        <h4>My course is Bachelor of Science in Information Technology Major in Web Development.</h4> 
+</body> 
 </html>
